--- a/Views/PI/ModeloIndustrial.cshtml
+++ b/Views/PI/ModeloIndustrial.cshtml
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group" id="uu_01_c">
-                                        <label>Nombre ModeloIndustrial</label>
+                                        <label>Nombre de modelo industrial</label>
                                         <input type="text" class="form-control input-sm" id="uu_01" autocomplete="off" />
                                     </div>
                                 </div>
@@ -215,6 +215,18 @@
                                         </select>
                                     </div>
                                 </div>
+                                <div class="col-md-8" id="uu_13_c" style="display:none;">
+                                    <div class="form-group">
+                                        <label>Creado por</label>
+                                        <input type="text" value="" class="form-control input-sm" id="uu_13" autocomplete="off" readonly disabled/>
+                                    </div>
+                                </div>
+                                <div class="col-md-4" id="uu_14_c" style="display:none;">
+                                    <div class="form-group">
+                                        <label>Fecha y Hora de creaci&oacuten</label>
+                                        <input type="text" value="" class="form-control input-sm" id="uu_14" autocomplete="off" readonly disabled/>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
@@ -222,7 +234,7 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="form-group" id="uu_06_c">
-                                        <label>Nombre</label>
+                                        <label>Nombre de inventor</label>
                                         <input type="text" class="form-control input-sm" id="uu_06" autocomplete="off" />
                                     </div>
                                 </div>
