--- a/Views/Shared/_aside.cshtml
+++ b/Views/Shared/_aside.cshtml
@@ -86,14 +86,14 @@
                                     <span class="nav-link-text" data-i18n="Usuarios">Usuarios</span>
                                 </a>
                             </li>
-                            @if (accesos.adm_roles)
+                            @*@if (accesos.adm_roles)
                             {
                                 <li class="">
                                     <a href="~/Administracion/Roles" title="Roles" data-filter-tags="Roles">
                                         <span class="nav-link-text" data-i18n="Roles">Roles</span>
                                     </a>
                                 </li>
-                            }
+                            }*@
                         </ul>
                     </li>
                 }
