--- a/Views/PI/Patente.cshtml
+++ b/Views/PI/Patente.cshtml
@@ -109,7 +109,7 @@
                                     </div>
                                     <% } %>
                                 </text>).Caption("ACCIONES").Width(150);
-                                columns.AddFor(m => m.nombre).CellTemplate(@<text>
+                                columns.AddFor(m => m.nombre_patente).CellTemplate(@<text>
                                     <% if (data.activo == false) { %>
                                     <div>
                                         <span class="dx-active-off"></span>
