--- a/Views/PI/Obra.cshtml
+++ b/Views/PI/Obra.cshtml
@@ -88,7 +88,7 @@
                 <div class="panel-content ctm-panel-content">
                     <div id="table-container">
                         @*-----*@
-                        @(Html.DevExtreme().DataGrid<ModeloUtilidad>
+                        @(Html.DevExtreme().DataGrid<Obra>
                             ()
                             .ID("tabla01")
                             .ShowBorders(true)
@@ -109,7 +109,7 @@
                                     </div>
                                     <% } %>
                                 </text>).Caption("ACCIONES").Width(150);
-                                columns.AddFor(m => m.nombre).CellTemplate(@<text>
+                                columns.AddFor(m => m.nombre_obra).CellTemplate(@<text>
                                     <% if (data.activo == false) { %>
                                     <div>
                                         <span class="dx-active-off"></span>
@@ -122,7 +122,7 @@
                                     </div>
                                     <% } %>
                                 </text>).Caption("Nombre");
-                                columns.AddFor(m => m.tipo_solicitud_nombre).Caption("Tipo de Obra");
+                                //columns.AddFor(m => m.tipo_solicitud_nombre).Caption("Tipo de Obra");
                                 //columns.AddFor(m => m.nombre_obra).Caption("Nombre");
                                 columns.AddFor(m => m.empresa_nombre).Caption("Empresa");
                                 columns.AddFor(m => m.pais_nombre).Caption("Pais");
