ajuste url solicitudes dashboard

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -291,7 +291,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" style="background-color:#616a6b;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=1" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=1" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Marcas</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solmarcas)</h3>
                                 </a>
@@ -303,7 +303,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" style="background-color:#616a6b;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=2" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=2" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Avisos Comerciales</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solavisos)</h3>
                                 </a>
@@ -316,7 +316,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                         
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=3" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=3" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Patentes</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solpatentes)</h3>
                                 </a>
@@ -328,7 +328,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" style="background-color: #5dade2;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=4" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=4" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Diseños Industriales</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.soldisenosindustrial)</h3>
                                 </a>
@@ -340,7 +340,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" style="background-color: #5dade2;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=5" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=5" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Modelos Utilidades</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solmodelosutilidad)</h3>
                                 </a>
@@ -352,7 +352,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" style="background-color: #5dade2;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=6" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=6" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Modelos Industriales</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solmodelosindustrial)</h3>
                                 </a>
@@ -364,7 +364,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" box="05">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=7" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=7" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Artisticas</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solobrasartistica)</h3>
                                 </a>
@@ -376,7 +376,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" box="05">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=8" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=8" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Visuales</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solobrasvisual)</h3>
                                 </a>
@@ -388,7 +388,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" box="05">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=9" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=9" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Literarias</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solobrasliteraria)</h3>
                                 </a>
@@ -400,7 +400,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" box="05">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=10" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=10" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Auditivas</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solobrasauditiva)</h3>
                                 </a>
@@ -412,7 +412,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" box="05">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=11" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=11" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Graficas</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solobrasgrafica)</h3>
                                 </a>
@@ -424,7 +424,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     <div class="ctm-graph-box" box="05">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
-                                <a href="/PI/RegistroMarcas?tipo=12" title="Link title" style="color:#FFFFFF">
+                                <a href="@(Utility.hosturl)/PI/RegistroMarcas?tipo=12" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Tecnologicas</h4>
                                     <h3>@Html.Raw(ViewBag.indicadores.solobrastecnologica)</h3>
                                 </a>
