--- a/Views/Shared/_aside.cshtml
+++ b/Views/Shared/_aside.cshtml
@@ -435,6 +435,14 @@
                                     </a>
                                 </li>
                             }
+                            @if (accesos.pi_HistorialMovimientos)
+                            {
+                                <li class="">
+                                    <a href="~/PI/HistorialMovimientos" title="Historial" data-filter-tags="Historial">
+                                        <span class="nav-link-text" data-i18n="Historial">Historial Movimientos</span>
+                                    </a>
+                                </li>
+                            }
                         </ul>
                     </li>
                 }
